--- a/www/searchPage.html
+++ b/www/searchPage.html
@@ -81,7 +81,7 @@
             margin-top: 20px;
         }
         paper-fab {
-                position: absolute;
+                position: fixed;
                 right: 20px; 
                 bottom: 20px;
             }
