--- a/platforms/android/assets/www/searchPage.html
+++ b/platforms/android/assets/www/searchPage.html
@@ -1,6 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
+    <head>        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <script src="components/bower_components/webcomponentsjs/webcomponents.js"></script>
+        <script src ="components/bower_components/platform/platform.js"></script>
+        <link rel="import" href="components/bower_components/core-scaffold/core-scaffold.html">
+        <link rel="import" href="components/bower_components/core-header-panel/core-header-panel.html">
+        <link rel="import" href="components/bower_components/core-menu/core-menu.html">
+        <link rel="import" href="components/bower_components/core-item/core-item.html">
+        <link rel="import" href="components/bower_components/paper-toast/paper-toast.html">
+        <link rel="import" href="components/bower_components/paper-input/paper-input.html">                         <link rel="import" href="components/bower_components/paper-icon-button/paper-icon-button.html">
+
+
+        <link rel="import" href="components/bower_components/paper-fab/paper-fab.html"> 
+        <link rel = "import" href="components/bower_components/core-toolbar/core-toolbar.html">  
+        
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        -------------------------------
 <link rel="import" href="components/bower_components/polymer/polymer.html">
 <link rel="import" href="components/bower_components/core-icon-button/core-icon-button.html">
 <link rel="import" href="components/bower_components/core-toolbar/core-toolbar.html">
