--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -12,8 +12,7 @@
         <link rel="import" href="components/bower_components/core-menu/core-menu.html">
         <link rel="import" href="components/bower_components/core-item/core-item.html">
         <link rel="import" href="components/bower_components/paper-toast/paper-toast.html">
-        <link rel="import" href="components/bower_components/paper-input/paper-input.html">                         
-        <link rel="import" href="components/bower_components/paper-icon-button/paper-icon-button.html">
+        <link rel="import" href="components/bower_components/paper-input/paper-input.html">                         <link rel="import" href="components/bower_components/paper-icon-button/paper-icon-button.html">
 
 
         <link rel="import" href="components/bower_components/paper-fab/paper-fab.html"> 
