Cleaning up Jquery code
Removed some unnecessary parts to javascript code.

--- a/www/searchPage.html
+++ b/www/searchPage.html
@@ -199,7 +199,7 @@
         </core-header-panel> 
         
         <paper-fab icon="save" ></paper-fab>
-        <paper-toast id="errortoast" text="Error. Invalid Input"></paper-toast>
+        <paper-toast id="errortoast" text="Drug not found."></paper-toast>
 
     </body>
 </html>
