--- a/www/searchPage.html
+++ b/www/searchPage.html
@@ -26,10 +26,10 @@
         <link rel="import" href="components/bower_components/core-icon-button/core-icon-button.html">
         <link rel="import" href="components/bower_components/core-toolbar/core-toolbar.html">
         <link rel="import" href="components/bower_components/core-input/core-input.html">
-        <link rel="import" href="components/bower_components/paper-input/paper-input.html">
+        <!link rel="import" href="components/bower_components/paper-input/paper-input.html">
         <link rel="import" href="components/bower_components/core-collapse/core-collapse.html">
 
-        <link rel="import" href="components/bower_components/paper-icon-button/paper-icon-button.html">
+        <!link rel="import" href="components/bower_components/paper-icon-button/paper-icon-button.html">
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script type="text/javascript" src="searchLink.js"></script>
         <link rel="import" href="components/bower_components/paper-fab/paper-fab.html"> 
