InfoPage javascript additions

--- a/www/index.html
+++ b/www/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-          <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="components/bower_components/webcomponentsjs/webcomponents.js"></script>
-        <!script src ="components/bower_components/platform/platform.js"></script>
+        <!-- <script src ="components/bower_components/platform/platform.js"></script> -->
         <link rel="import" href="components/bower_components/core-scaffold/core-scaffold.html">
         <link rel="import" href="components/bower_components/core-header-panel/core-header-panel.html">
         <link rel="import" href="components/bower_components/core-menu/core-menu.html">
@@ -25,7 +25,7 @@
     
         <script type="text/javascript" src="js/bootstrap.js"></script>
     
-    <script type="text/javascript" src="js/savedSearches.js"></script>
+        <script type="text/javascript" src="js/savedSearches.js"></script>
 
         <script type="text/javascript">
             app.initialize();
