save list functions
“clear” and “clear all” are now fully functional

--- a/www/searchPage.html
+++ b/www/searchPage.html
@@ -25,6 +25,7 @@
 
         <script type="text/javascript" src="js/index.js"></script>
         <script type=text/javascript src="js/savedSearches.js"></script>
+        <script type=text/javascript src="js/displaySavedSearches.js"></script>
        <script type="text/javascript" src="js/bootstrap.js"></script>
     
     <script type="text/javascript" src="js/searchLink.js"></script>
