Changed Colors, Added Informed Logo

--- a/www/infoPage.html
+++ b/www/infoPage.html
@@ -21,11 +21,11 @@
           background: white;
         }
         core-toolbar {
-          background-color: rgb(218,67,54);
+          background-color: #009688;
           color:white;
         }
         #navheader {
-          background-color: #B71C1C;
+          background-color: #00695C;
         }
         .content {
           padding: 20px;
