--- a/www/searchPage.html
+++ b/www/searchPage.html
@@ -68,7 +68,7 @@
               #core_toolbar {
                 color: rgb(255, 255, 255);
 /*              background-color: rgb(79, 125, 201);*/
-                background-color: rgb(218,67,54);
+                background-color:#009688;
 
               }
               #section {
@@ -118,17 +118,17 @@
                     position:fixed;
                     bottom:3%;
                     right: 3%;
-                background-color:#448AFF;
+                background-color:#FFC107;
                 }
 
              .custom /deep/ ::-webkit-input-placeholder {
-                    color: #B71C1C;                
+                    color: #FFECB3;                
                 }
                 .custom /deep/ .unfocused-underline {
-                    background-color: #FFCDD2;
+                    background-color: white;
                 }
                 .custom /deep/ .focused-underline {
-                    background-color: white;
+                    background-color: #FFC107;
                 }
                 .custom {
                     color: white;
