removed hover feature for info page

--- a/www/infoPage.html
+++ b/www/infoPage.html
@@ -19,8 +19,8 @@
           font-family: 'Roboto',sans-serif;
         }
         
-        core-item:hover{
-              background-color: #FFC107;
+        /*core-item:hover{
+              background-color: #FFC107;*/
         }
         
         #field{
