--- a/www/index.html
+++ b/www/index.html
@@ -146,7 +146,7 @@
     
             <core-header-panel mode="standard" id="core_header_panel">
               <core-toolbar id="core_toolbar">
-                <div id="div" flex><img src="img/informedWhite.png"></div>
+                <div id="div" flex><img src="img/InformedAmber.svg"></div>
                   <a href= "searchPage.html" id="searchBtn"><paper-icon-button id="searchBtn" icon="search"></paper-icon-button></a>              
               </core-toolbar>
                     
