--- a/www/searchPage.html
+++ b/www/searchPage.html
@@ -84,7 +84,9 @@
             .heading {
                   background-color: white;
                   padding: 10px 15px;
-                  box-shadow: rgba(0, 0, 0, 0.0980392) 0px 2px 4px, rgba(0, 0, 0, 0.0980392) 0px 0px 3px;
+/*                  box-shadow: rgba(0, 0, 0, 0.0980392) 0px 2px 4px, rgba(0, 0, 0, 0.0980392) 0px 0px 3px;*/
+                  box-shadow: rgba(0, 0, 0, .5) 0px 2px 4px, rgba(0, 0, 0, .5) 0px 0px 3px;
+
                   border-top-left-radius: 2px;
                   border-top-right-radius: 2px;
                   border-bottom-right-radius: 2px;
@@ -98,6 +100,7 @@
             .content {
               margin-bottom: 1%;
               background-color: #F5F5F5;
+                
               padding: 15px;
               border: 1px solid #dedede;
               border-top: none;
@@ -118,7 +121,7 @@
                     position:fixed;
                     bottom:3%;
                     right: 3%;
-                background-color:#FFC107;
+                background-color:#FFC107; /* yellow collor*/
                 }
 
              .custom /deep/ ::-webkit-input-placeholder {
