--- a/www/searchPage.html
+++ b/www/searchPage.html
@@ -63,7 +63,7 @@
                 left: 0px;
                 top: 0px;
                 position: absolute; 
-                background-color:rgb(235,235,235) ; <!-- color is for slight  margin under toolbar-->
+                background-color:#FAFAFA ; <!-- color is for slight  margin under toolbar-->
               }
               #core_toolbar {
                 color: rgb(255, 255, 255);
@@ -73,7 +73,7 @@
               }
               #section {
                 height: 100%;
-                background: rgb(235,235,235);
+                background: #FAFAFA;
               }
             
             #searchBtn {
@@ -84,8 +84,7 @@
             .heading {
                   background-color: white;
                   padding: 10px 15px;
-/*                  box-shadow: rgba(0, 0, 0, 0.0980392) 0px 2px 4px, rgba(0, 0, 0, 0.0980392) 0px 0px 3px;*/
-                  box-shadow: rgba(0, 0, 0, .5) 0px 2px 4px, rgba(0, 0, 0, .5) 0px 0px 3px;
+                  box-shadow: rgba(0, 0, 0, 0.0980392) 0px 2px 4px, rgba(0, 0, 0, 0.0980392) 0px 0px 3px;
 
                   border-top-left-radius: 2px;
                   border-top-right-radius: 2px;
