--- a/www/searchPage.html
+++ b/www/searchPage.html
@@ -16,7 +16,7 @@
         <link rel="import" href="components/bower_components/paper-toast/paper-toast.html">
         <link rel="import" href="components/bower_components/paper-input/paper-input.html">                         
         <link rel="import" href="components/bower_components/paper-icon-button/paper-icon-button.html">
-
+        <link rel="import" href="components/paper-shadow/paper-shadow.html">
 
         <link rel="import" href="components/bower_components/paper-fab/paper-fab.html"> 
         <link rel = "import" href="components/bower_components/core-toolbar/core-toolbar.html">  
