Cleaned up some files

--- a/www/infoPage.html
+++ b/www/infoPage.html
@@ -10,13 +10,13 @@
 <link rel="import" href="components/bower_components/core-icon-button/core-icon-button.html">
 <link rel="import" href="components/bower_components/core-toolbar/core-toolbar.html">
 <link rel="import" href="components/bower_components/core-menu/core-submenu.html">
-<link href='http://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
+<!--<link href='http://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'> -->
 <link rel="import" href="components/bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="components/bower_components/core-icons/core-icons.html">
 <link rel="import" href="components/bower_components/paper-shadow/paper-shadow.html">
 
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 <script type="text/javascript" src="js/infoPage.js"></script>
     <style>  
         body {
