--- a/www/searchPage.html
+++ b/www/searchPage.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-          <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+          <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
         <script src="components/bower_components/webcomponentsjs/webcomponents.js"></script>
         <!script src ="components/bower_components/platform/platform.js"></script>
 
