quicken page transitions

--- a/www/searchPage.html
+++ b/www/searchPage.html
@@ -138,6 +138,10 @@
          paper-input {
         width: 100%;
       }
+        a:active,
+        element.addEventListener('touchstart',function(e) {
+            e.currentTarget.className = "active";
+        });
     </style>
         
  
