small syntax fix

--- a/www/infoPage.html
+++ b/www/infoPage.html
@@ -20,8 +20,8 @@
         <link rel = "import" href="components/bower_components/core-toolbar/core-toolbar.html">  
         
         <script type="text/javascript" src="js/index.js"></script>
-        <script type=text/javascript src="js/savedSearches.js"></script>
-        <script type=text/javascript src="js/displaySavedSearches.js"></script>
+        <script type="text/javascript" src="js/savedSearches.js"></script>
+        <script type="text/javascript" src="js/displaySavedSearches.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
         <script type="text/javascript" src="js/infoPage.js"></script>
 
