--- a/www/index.html
+++ b/www/index.html
@@ -184,7 +184,15 @@
                 width: 100%;
             }
             
-            .list_text{
+            @media only screen and (max-device-width: 480px) {
+                #clearBtn{
+                background-color: #009688;
+                color:white;
+                width: 50%;
+                margin-left: 25%;
+                margin-right: 25%;
+                text-align:center;
+                }         
             }
             </style>
     </head>
