--- a/www/index.html
+++ b/www/index.html
@@ -251,8 +251,11 @@
                     </table>
                 </div>         
                
+<!--
                 <button type="button" class="btn btn-default btn-sm" id="barcodescanner">
                 <span class="glyphicon glyphicon-barcode" ></span> Barcode </button>                        
+-->
+                <button id="barcodescanner">Click Me</button>
             </core-header-panel>            
         </body>
 
