--- a/www/index.html
+++ b/www/index.html
@@ -290,7 +290,7 @@
                 
             </core-header-panel>                                                                                             
                <paper-action-dialog id="dialog" backdrop autoCloseDisabled layered="false">
-                <p id="deleteMsg">Some content</p>
+                <p id="deleteMsg"></p>
                    <paper-button id="decline" affirmative>Decline</paper-button>
       <paper-button id="accept" affirmative autofocus>Accept</paper-button>
                 </paper-action-dialog>
