some barcode changes

--- a/www/index.html
+++ b/www/index.html
@@ -296,7 +296,7 @@
                 </paper-action-dialog>
             
                 <paper-action-dialog id="bardialog" backdrop autoCloseDisabled layered="false">
-                    <p>Barcode Scan Worked! Cointinue to search?</p>
+                    <p id ="barMsg">Barcode Scan Worked! Cointinue to search?</p>
                     <paper-button id="decline" affirmative> Decline</paper-button>
                     <paper-button id="accept" affirmative> Accept</paper-button>
                 </paper-action-dialog>
