Working on barcode

--- a/www/index.html
+++ b/www/index.html
@@ -243,6 +243,7 @@
 
             html /deep/ paper-dialog {
             color: green;
+                
             }
 
             html /deep/ paper-dialog::shadow #scroller {
@@ -298,8 +299,12 @@
                 <paper-action-dialog id="bardialog" backdrop autoCloseDisabled layered="false">
                     <p id ="barMsg">Barcode Scan Worked! Cointinue to search?</p>
                     <paper-button id="decline" affirmative> Decline</paper-button>
-                    <paper-button id="accept" affirmative> Accept</paper-button>
+                    <a id="barlink" href="searchPage.html"><paper-button id="accept" affirmative> Accept</paper-button></a>
                 </paper-action-dialog>
+                
+            <paper-dialog id="bardialogfail" backdrop autoCloseDisabled layered="false">
+                <p id ="failMsg">Barcode Scan Worked! Cointinue to search?</p>
+                </paper-dialog>
         </body>
 
         <div id="footer" horizontal layout center>
